# pln

./: .gitignore  README.md  main.py  pyproject.toml
Clase 1/: Clase_1_Vectorización_de_texto.ipynb
Desafios/: Desafio_1.ipynb  Desafio_2.ipynb  Desafio_3.ipynb  dylan_gru.keras  dylan_lstm.keras  dylan_rnn.keras  my_model.keras
